# Noura-v2

./: .gitignore  agent-skills.md  call-flow.txt  dispatch.py  livekit-blog.txt  main.py  pyproject.toml  smart_agent.py
tests/: conftest.py  test_smart_agent.py
