[project]
name = "noura-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents>=1.5.7",
    "livekit-plugins-deepgram>=1.5.7",
    "livekit-plugins-faseeh>=0.1.5",
    "livekit-plugins-openai>=1.5.7",
    "livekit-plugins-silero>=1.5.7",
    "livekit-plugins-soniox>=1.5.7",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
